--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Tiles";
+  src: url("/assets/Tiles-Regularv2.1-SVG.otf") format("otf");
+}
+
 * {
   box-sizing: border-box;
 }
